--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       <div class="row">
         <div class="col text-center">
           <small class="block">&copy; 2023 Mr&Mrs Project. All Rights Reserved.</small>
-          <small class="block">Design by <a href="https://github.com/dropdot/">@sandhikagalih</a>.</small>
+          <small class="block">Design by <a href="https://github.com/dropdot/">@Dropdot</a>.</small>
 
           <ul class="mt-3">
             <li><a href="https://instagram.com/"><i class="bi bi-instagram"></i></a></li>
